# fgdb-tools

./: README.md  pyproject.toml
scripts/: export_gdb_to_geojson.py  geo_to_fgdb.py
src/fgdb_tools/: __init__.py  __main__.py  cli.py  common.py  exporter.py  gui.py  importer.py
src/fgdb_tools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_gui_import.py  test_imports.py
